Update message in index.html with new content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body id="bg">
 
     <button id="btn" class="red-circle" onclick="aksiyon()"></button>
-    <div id="msg">KÜRT-OROSPU ÇOCUKLSRI! 😂</div>
+    <div id="msg">🖕KÜRT-OROSPU ÇOCUKLSRI! 🖕</div>
 
     <audio id="sesElemani" src="Ses.mp3" preload="auto"></audio>
 
